--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,20 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
 }
+
+li {
+  list-style: none;
+  display: inline-block;
+}
+/* UTILITY */
+.flex {
+  display: flex;
+}
+.flex-c {
+  display: flex;
+  flex-direction: column;
+}
+/* HEADER */
+.navigazione .sinistra img {
+  width: 200px;
+}
